# ChangeLog for dev-util/dejagnu
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/dejagnu/ChangeLog,v 1.14 2007/02/22 01:59:49 peper Exp $

  22 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  27 Apr 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-dejagnu-1.4.4-r1, Manifest:
  Fixing SHA256 digest, pass four

  11 Apr 2006; Diego Pettenò <flameeyes@gentoo.org>
  dejagnu-1.4.4-r1.ebuild:
  Add ~x86-fbsd keyword.

  20 Jan 2005; Mike Frysinger <vapier@gentoo.org> dejagnu-1.4.4-r1.ebuild:
  Dont try to run src_test() if dejagnu isnt installed yet since it uses
  itself to run the tests.

  09 Nov 2004; Mike Frysinger <vapier@gentoo.org> dejagnu-1.4.4-r1.ebuild,
  -dejagnu-1.4.4.ebuild:
  Clean up and move to stable for #42939.

  31 Oct 2004; Aron Griffis <agriffis@gentoo.org> dejagnu-1.4.4-r1.ebuild:
  add ~alpha and ~ia64

  01 Jul 2004; Jeremy Huddleston <eradicator@gentoo.org>
  dejagnu-1.4.4-r1.ebuild, dejagnu-1.4.4.ebuild:
  virtual/glibc -> virtual/libc

  31 May 2004; Tom Gall <tgall@gentoo.org> dejagnu-1.4.4-r1.ebuild:
  stable on ppc64

*dejagnu-1.4.4-r1 (07 May 2004)

  07 May 2004; Travis Tilley <lv@gentoo.org>
  +files/dejagnu-ignore-libwarning.patch, +dejagnu-1.4.4-r1.ebuild:
  added patch to ignore linker warning when searching for 64bit libraries in
  /lib and marked stable on amd64

  01 Mar 2004; David Holm <dholm@gentoo.org> dejagnu-1.4.4.ebuild:
  Added to ~ppc.

*dejagnu-1.4.4 (29 Feb 2004)

  29 Feb 2004; Martin Schlemmer <azarah@gentoo.org> dejagnu-1.4.4.ebuild:
  Update version.

*dejagnu-1.4.3 (29 Jun 2003)

  30 Sep 2003; Joshua Kinard <kumba@gentoo.org> dejagnu-1.4.3.ebuild:
  Added ~sparc & ~mips to KEYWORDS
  Useful for running 'make check' on GNU tools (glibc/binutils)

  29 Jun 2003; Martin Schlemmer <azarah@gentoo.org> dejagnu-1.4.3.ebuild:
  Initial release.
